--- a/views/popup/index.html
+++ b/views/popup/index.html
@@ -31,12 +31,11 @@
 </head>
 
 <body style="min-width: 320px; font-family: helvetica,arial,courier;">
-  <div style="font-size: 16px; border-bottom: 1px solid lightgray;
-   padding: 9px 0;text-align: center;"
->
+  <div style="font-size: 16px; border-bottom: 1px solid lightgray; padding: 9px 0;text-align: center;">
     dl 下载器
   </div>
-  <div id="app"></div>
+  <div id="app">
+  </div>
   <script type="module" src="./main.ts"></script>
 </body>
 
